--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,8 +1,54 @@
-.logo {
-  margin: 5px;
-  padding-left: 10px;
+body,
+html {
+  margin: 0px;
 }
 .header {
-  display: inline-block;
-  background-color: darkgray;
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 10px 35px;
+}
+.logo {
+  font: 180px "Arial Narrow", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 15px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-right {
+    float: none;
+  }
 }
