--- a/Styles/index.css
+++ b/Styles/index.css
@@ -4,14 +4,24 @@ html {
 }
 .header {
   overflow: hidden;
-  background-color: #f1f1f1;
+  background-color: #e0e0e0;
   padding: 10px 35px;
+  top: 0;
 }
 .logo {
-  font: 180px "Arial Narrow", sans-serif;
+  font: 30px "Arial Narrow", sans-serif;
   text-transform: uppercase;
   letter-spacing: 2px;
+  padding-left: 20px;
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 18px;
 }
+.logo-image {
+  padding: 0px;
+  margin: 0px;
+}
+
 .header a {
   float: left;
   color: black;
@@ -40,6 +50,9 @@ html {
 
 .header-right {
   float: right;
+  padding-top: 20px;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 @media screen and (max-width: 500px) {
@@ -51,4 +64,49 @@ html {
   .header-right {
     float: none;
   }
+}
+@keyframes slider {
+  0% {
+    left: 0;
+  }
+  20% {
+    left: 0;
+  }
+  25% {
+    left: -100%;
+  }
+  45% {
+    left: -100%;
+  }
+  50% {
+    left: -200%;
+  }
+  70% {
+    left: -200%;
+  }
+  75% {
+    left: -300%;
+  }
+  95% {
+    left: -300%;
+  }
+  100% {
+    left: -400%;
+  }
+}
+#slider {
+  overflow: hidden;
+}
+#slider figure img {
+  width: 20%;
+  float: left;
+}
+#slider figure {
+  position: relative;
+  width: 500%;
+  margin: 0;
+  left: 0;
+  text-align: left;
+  font-size: 0;
+  animation: 20s slider infinite;
 }
