--- a/Styles/shop.css
+++ b/Styles/shop.css
@@ -1,3 +1,7 @@
+body,
+html {
+  margin: 0px;
+}
 #wishlist,
 #cart {
   font-size: 22px;
@@ -11,4 +15,40 @@
   margin-right: 15px;
   margin-top: 5px;
   padding: 0px;
+}
+.navClass {
+  background-color: #bdbdbd;
+  font-size: 22px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 0px;
+  height: 2%;
+  width: 100%;
+}
+.navTabs {
+  list-style: none;
+  padding-left: 10px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+.navTabs > li {
+  display: inline-block;
+  margin-right: 0px;
+  padding-top: 12px;
+  text-align: center;
+  padding-bottom: 12px;
+}
+@media screen and (min-width: 460px) {
+  .navTabs > li {
+    width: 24%;
+  }
+}
+@media screen and (max-width: 460px) {
+  .navTabs > li {
+    display: block;
+  }
+}
+.navTabs > li:hover {
+  background-color: #8d8d8d;
+  color: #efefef;
+  cursor: pointer;
 }
