Shop categories done..

--- a/Styles/shop.css
+++ b/Styles/shop.css
@@ -96,7 +96,8 @@ html {
 #women:hover,
 #men-watch:hover,
 #women-watch:hover,
-#smartwatch:hover #cricket:hover,
+#smartwatch:hover,
+#cricket:hover,
 #football:hover,
 #racquet:hover,
 #accessories:hover {
