--- a/Styles/shop.css
+++ b/Styles/shop.css
@@ -107,13 +107,41 @@ html {
 }
 .side-panel {
   height: 100%;
-  width: 18%;
+  width: 16%;
   position: fixed;
   z-index: 0;
   margin-top: 11.08%;
-  top: 0;
   left: 0;
   background-color: #e0e0e0;
   overflow-x: hidden;
   padding-top: 20px;
+}
+@media screen and (min-width: 1280px) {
+  .side-panel {
+    top: 0;
+  }
+}
+#panel-tabs {
+  list-style: none;
+  margin-top: -8%;
+  margin-left: -17.8%;
+}
+#panel-tabs > li {
+  display: block;
+  width: 100%;
+  background-color: #bdbdbd;
+  text-align: center;
+  line-height: 200%;
+  font-size: 18px;
+  margin-bottom: 0.5%;
+  cursor: pointer;
+}
+#sub-panel {
+  list-style-type: none;
+  margin-left: 40%;
+  background-color: #e0e0e0;
+  display: none;
+}
+#sub-panel input[type="checkbox"] {
+  background-color: #e0e0e0;
 }
