--- a/Styles/shop.css
+++ b/Styles/shop.css
@@ -108,12 +108,15 @@ html {
 .side-panel {
   height: 100%;
   width: 16%;
-  position: fixed;
+
+  position: absolute;
   z-index: 0;
-  margin-top: 11.08%;
+  margin-top: 11.2%;
   left: 0;
+  margin-top: 0px;
   background-color: #e0e0e0;
-  overflow-x: hidden;
+  overflow: auto;
+  position: sticky;
   padding-top: 20px;
 }
 @media screen and (min-width: 1280px) {
@@ -144,4 +147,25 @@ html {
 }
 #sub-panel input[type="checkbox"] {
   background-color: #e0e0e0;
+}
+#display {
+  margin-left: 19%;
+  margin-top: -4%;
+}
+#display #item {
+  display: inline-block;
+}
+#item {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 30%;
+  margin-right: 3%;
+  margin-bottom: 4%;
+}
+#item-image {
+  height: 200px;
+  width: 100%;
+}
+#item-details {
+  padding: 3% 3%;
 }
