--- a/Styles/shop.css
+++ b/Styles/shop.css
@@ -107,14 +107,12 @@ html {
 }
 .side-panel {
   height: 100%;
+  float: left;
   width: 16%;
-
-  position: absolute;
+  position: fixed;
   z-index: 0;
-  margin-top: 11.2%;
   left: 0;
   margin-top: 0px;
-  background-color: #e0e0e0;
   overflow: auto;
   position: sticky;
   padding-top: 20px;
@@ -130,7 +128,7 @@ html {
   margin-left: -17.8%;
 }
 #panel-tabs > li {
-  display: block;
+  float: left;
   width: 100%;
   background-color: #bdbdbd;
   text-align: center;
@@ -141,16 +139,13 @@ html {
 }
 #sub-panel {
   list-style-type: none;
-  margin-left: 40%;
-  background-color: #e0e0e0;
+  margin-left: 35%;
+  /* background-color: #e0e0e0; */
   display: none;
-}
-#sub-panel input[type="checkbox"] {
-  background-color: #e0e0e0;
 }
 #display {
   margin-left: 19%;
-  margin-top: -4%;
+  margin-top: 2%;
 }
 #display #item {
   display: inline-block;
@@ -161,6 +156,7 @@ html {
   width: 30%;
   margin-right: 3%;
   margin-bottom: 4%;
+  cursor: pointer;
 }
 #item-image {
   height: 200px;
