--- a/Styles/shop.css
+++ b/Styles/shop.css
@@ -134,7 +134,7 @@ html {
   text-align: center;
   line-height: 200%;
   font-size: 18px;
-  margin-bottom: 0.5%;
+  margin-bottom: 1%;
   cursor: pointer;
 }
 #sub-panel {
@@ -147,10 +147,10 @@ html {
   margin-left: 19%;
   margin-top: 2%;
 }
-#display #item {
+#display .item {
   display: inline-block;
 }
-#item {
+.item {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   width: 30%;
@@ -159,8 +159,11 @@ html {
   cursor: pointer;
 }
 #item-image {
-  height: 200px;
-  width: 100%;
+  height: 280px;
+  width: 160px;
+  margin-left: 85px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 #item-details {
   padding: 3% 3%;
