--- a/Styles/shop.css
+++ b/Styles/shop.css
@@ -154,13 +154,25 @@ html {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   height: 5%;
-  width: 30%;
   margin-right: 3%;
   margin-bottom: 4%;
   cursor: pointer;
   vertical-align: middle;
   display: table-cell;
   text-align: center;
+}
+.item:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-width: 860px) {
+  .item {
+    width: 30%;
+  }
+}
+@media screen and (max-width: 860px) {
+  .item {
+    width: 45%;
+  }
 }
 #item-image {
   height: 280px;
